# voxel_toy

./: .gitignore  CMakeLists.txt  COPYING  glwindow.cpp  glwindow.h  makefile  makefile.old  requirements.txt
config/: effect.cfg  obsidian.cfg  phong_shading.cfg  quad_geom.cfg  sampler.cfg  spinny_stone.cfg  static_stone.cfg  textures.cfg  turning_wood.cfg  uniforms.cfg
core/: CMakeLists.txt
core/api/: _core.cpp
core/include/: config.h  core.h  dispatch.h  fileops.h  math_ext.h  py_error.hpp  rconsole.h  system.h  timer.h  transform.h
core/src/: config.cpp  dispatch.cpp  error.cpp  fileops.cpp  math_ext.cpp  rconsole.cpp  timer.cpp  transform.cpp
core/src/python/: rconsole.py
core/tests/: config_tests.cpp  file_tests.cpp  vector_tests.cpp
exec/cmake_modules/: FindGLM.cmake
exec/include/: data_paths.h.in
exec/python/core/: __init__.py  rconsole.py
exec/python/script/: __init__.py  clock.py
exec/python/testpkg/: __init__.py
exec/src/: main.cpp  tests.cpp
include/: dispatch.h  glrenderer.h  glwindow.h  instrumentation.h  math.h  math_ext.h  meshes.h  physicssystem.h  rendersystem.h  system.h
input/: CMakeLists.txt
input/include/: inputsystem.h
input/src/: inputsystem.cpp
physics/: CMakeLists.txt
physics/include/: integrator.h  physics.h  physicssystem.h
physics/src/: integrator.cpp  physicssystem.cpp
python/: CMakeLists.txt  api.cpp
python/api/: _script.cpp  _testpkg.cpp
python/core/: rconsole.py
python/include/: error.hpp  interpreter.h  rconsole.h  script.h  scriptsystem.h
python/src/: interpreter.cpp  rconsole.cpp  scriptsystem.cpp
rendering/: CMakeLists.txt
rendering/include/: effect.h  error.h  geometry.h  glwindow.h  meshes.h  program.h  rendering.h  rendersystem.h  sampler.h  texture.h  uniform.h  uniform_block.h  uniform_buffer.h
rendering/shaders/: flat.fs  phong.fs  phong.vs  texture.fs  texture.vs
rendering/src/: effect.cpp  error.cpp  geometry.cpp  glwindow.cpp  meshes.cpp  program.cpp  rendersystem.cpp  sampler.cpp  texture.cpp  uniform.cpp  uniform_block.cpp  uniform_buffer.cpp
res/: .gitignore  custom.supp  flat.vs  phong.fs  phong.vs  texture.fs  texture.vs
scripting/: CMakeLists.txt
scripting/api/: _script.cpp
scripting/include/: config.h  error.hpp  rconsole.h  script.h
scripting/src/: config.cpp  error.cpp  rconsole.cpp
scripting/tests/: config_tests.cpp
src/: CMakeLists.txt  dispatch.cpp  glrenderer.cpp  glwindow.cpp  instrumentation.cpp  main.cpp  math.cpp  math_ext.cpp  meshes.cpp  physicssystem.cpp  rconsole.py  rendersystem.cpp  system.cpp
tests/: math_ext.cpp  test.cpp
voxel/: CMakeLists.txt
voxel/include/: voxelsystem.h
voxel/src/: voxelsystem.cpp
